--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "fastify-cookie": "^5.7.0",
     "knex": "^2.4.2",
     "pg": "^8.11.0",
-
+    "fastify": "^4.17.0",
     "zod": "^3.21.4"
   }
 }
